<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            />
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            />
        <Button
            android:id="@+id/gameStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameStart"
            />
        <Button
            android:id="@+id/bind"
             android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/bind"/>
        <Button
            android:id="@+id/unbind"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/unbind"/>
        <Button
            android:id="@+id/getstatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/getstatus"/>
        <Button
            android:id="@+id/sendBroadcast"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sendBroadcast"/>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:phoneNumber="true"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
